[package]
name = "rubix"
version = "0.1.0"
edition = "2021"
authors = ["RUBIX Team"]
description = "Enterprise-Grade Network Blocking Engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rubix/rubix"

[[bin]]
name = "rubix"
path = "src/main.rs"

[[bin]]
name = "rubix-cli"
path = "cli/main.rs"

[dependencies]
# Packet capture & parsing
pcap = "1.2"
etherparse = "0.13"

# Async runtime
tokio = { version = "1.35", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
    "sync",
    "io-util",
    "net"
] }
async-trait = "0.1"
futures = "0.3"

# Concurrency & caching
crossbeam-channel = "0.5"
dashmap = "5.5"
once_cell = "1.19"
parking_lot = "0.12"  # Faster mutexes for hot paths

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Filesystem & config
notify = "6.1"
walkdir = "2"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# HTTP client (optional - webhook feature)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], optional = true }

# Database (optional - storage feature)
rusqlite = { version = "0.30", features = ["bundled"], optional = true }

# Metrics (optional - metrics feature)
metrics = { version = "0.22", optional = true }
metrics-exporter-prometheus = { version = "0.13", optional = true }

# System - Linux
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27", features = ["socket", "net", "process", "user"] }
libc = "0.2"

# System - Windows
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "iphlpapi",
    "winerror",
    "winsock2",
    "ws2ipdef",
    "ws2tcpip",
    "netioapi"
] }

[features]
default = []
webhook = ["dep:reqwest"]
storage = ["dep:rusqlite"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]
full = ["webhook", "storage", "metrics"]


[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"           # Smaller binary, no unwinding
strip = true              # Strip symbols for smaller binary

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3