[package]
name = "rubix"
version = "1.0.0"
edition = "2021"
authors = ["RUBIX -Manik"]
description = "Enterprise-Grade Network Defense Engine with Process Attribution"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rubix/rubix"
rust-version = "1.70"

[[bin]]
name = "rubix"
path = "src/main.rs"

[[bin]]
name = "rubix-cli"
path = "cli/main.rs"

[lib]
name = "rubix"
path = "src/lib.rs"

[dependencies]
ipnetwork = "0.20"

# ── Packet capture & parsing ──────────────────────────────────────────────────
pcap        = "1.3"
etherparse  = "0.15"

# ── Async runtime ─────────────────────────────────────────────────────────────
tokio = { version = "1.38", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
    "sync",
    "io-util",
    "net",
    "fs",
] }
async-trait = "0.1"
futures     = "0.3"

# ── Concurrency & caching ─────────────────────────────────────────────────────
crossbeam-channel = "0.5"
dashmap           = "6.0"
once_cell         = "1.19"
parking_lot       = "0.12"   # High-performance RwLock — used in process resolver & live stats

# ── Serialization ─────────────────────────────────────────────────────────────
serde      = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# ── Logging & tracing ─────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender   = "0.2"

# ── Error handling ────────────────────────────────────────────────────────────
anyhow    = "1.0"
thiserror = "1.0"

# ── Time handling ─────────────────────────────────────────────────────────────
chrono = { version = "0.4", features = ["serde"] }

# ── Filesystem & config ───────────────────────────────────────────────────────
notify  = "6.1"
walkdir = "2"

# ── CLI ───────────────────────────────────────────────────────────────────────
clap = { version = "4.5", features = ["derive", "env"] }

# ── Network utilities ─────────────────────────────────────────────────────────
ipnet = "2.12"

# ── HTTP client (webhook feature) ─────────────────────────────────────────────
reqwest = { version = "0.12", features = ["json", "rustls-tls"], optional = true }

# ── Database (storage feature) ────────────────────────────────────────────────
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

# ── Metrics (metrics feature) ─────────────────────────────────────────────────
metrics                    = { version = "0.23", optional = true }
metrics-exporter-prometheus = { version = "0.15", optional = true }

# ══════════════════════════════════════════════════════════════════════════════
# ── Linux-specific dependencies ───────────────────────────────────────────────
# ══════════════════════════════════════════════════════════════════════════════
[target.'cfg(target_os = "linux")'.dependencies]
nix    = { version = "0.29", features = ["socket", "net", "process", "user"] }
libc   = "0.2"
procfs = "0.16"   # Process resolution via /proc

# ══════════════════════════════════════════════════════════════════════════════
# ── Windows-specific dependencies ─────────────────────────────────────────────
# ══════════════════════════════════════════════════════════════════════════════
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    # Network management
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",

    # Process queries
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",

    # Foundation types
    "Win32_Foundation",

    # Firewall (Windows Filtering Platform)
    "Win32_NetworkManagement_WindowsFilteringPlatform",

    # Console / ANSI VT processing
    # Required by rubix-cli monitor to enable ANSI escape sequences in
    # CMD and PowerShell via SetConsoleMode +
    # ENABLE_VIRTUAL_TERMINAL_PROCESSING. Without this feature the
    # terminal prints raw "←[2K" garbage instead of processing the codes.
    "Win32_System_Console",
] }

# ══════════════════════════════════════════════════════════════════════════════
# ── Feature flags ─────────────────────────────────────────────────────────────
# ══════════════════════════════════════════════════════════════════════════════
[features]
default = []
webhook = ["dep:reqwest"]
storage = ["dep:rusqlite"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]
full    = ["webhook", "storage", "metrics"]

# ══════════════════════════════════════════════════════════════════════════════
# ── Build profiles ────────────────────────────────────────────────────────────
# ══════════════════════════════════════════════════════════════════════════════

[profile.release]
opt-level       = 3
lto             = "fat"
codegen-units   = 1
strip           = true
panic           = "abort"
overflow-checks = false

[profile.dev]
opt-level   = 0
debug       = true
incremental = true

[profile.bench]
inherits      = "release"
lto           = "fat"
codegen-units = 1
opt-level     = 3

# ── Optimise hot dependencies even in dev builds ──────────────────────────────
[profile.dev.package.pcap]
opt-level = 2

[profile.dev.package.etherparse]
opt-level = 2

[profile.release.package."*"]
opt-level     = 3
codegen-units = 1

# ══════════════════════════════════════════════════════════════════════════════
# ── Package metadata ──────────────────────────────────────────────────────────
# ══════════════════════════════════════════════════════════════════════════════
[package.metadata.docs.rs]
all-features  = true
rustdoc-args  = ["--cfg", "docsrs"]
